@@ -13,28 +13,30 @@
   uncaught error, i.e., the sequence of calls that lead to the error.
   This is useful when an error occurs with an unidentifiable error
   message.  It can also be used to print the current stack or
-  arbitrary lists of deparsed calls.
+  arbitrary lists of calls.
 
   \code{.traceback()} now \emph{returns} the above call stack (and
   \code{traceback(x, *)} can be regarded as convenience function for
   printing the result of \code{.traceback(x)}).
 }
 \usage{
-traceback(x = NULL, max.lines = getOption("deparse.max.lines"))
-.traceback(x = NULL)
+ traceback(x = NULL, max.lines = getOption("traceback.max.lines",
+                                           getOption("deparse.max.lines"))
+.traceback(x = NULL, max.lines = getOption("traceback.max.lines",
+                                           getOption("deparse.max.lines"))
 }
 \arguments{
   \item{x}{\code{NULL} (default, meaning \code{.Traceback}), or an
     integer count of calls to skip in the current stack, or a list or
-    pairlist of deparsed calls.  See the details.}
-  \item{max.lines}{The maximum number of lines to be printed
+    pairlist of calls.  See the details.}
+  \item{max.lines}{the maximum number of lines to be printed
     \emph{per call}.  The default is unlimited.}
 }
 \details{
   The default display is of the stack of the last uncaught error as
-  stored as a list of deparsed calls in \code{.Traceback}, which
+  stored as a list of \code{\link{call}}s in \code{.Traceback}, which
   \code{traceback} prints in a user-friendly format.  The stack of
-  deparsed calls always contains all function calls and all foreign
+  calls always contains all function calls and all foreign
   function calls (such as \code{\link{.Call}}): if profiling is in
   progress it will include calls to some primitive functions.  (Calls
   to builtins are included, but not to specials.)
@@ -48,15 +50,15 @@ traceback(x = NULL, max.lines = getOption("deparse.max.lines"))
   \code{x} entries at the top of the stack.  For example,
   \code{options(error = function() traceback(3))} will print the stack
   at the time of the error, skipping the call to \code{traceback()} and
-  \code{.traceback()} 
+  \code{.traceback()}
   and the error function that called it.
 
-  Otherwise, \code{x} is assumed to be a list or pairlist of deparsed
-  calls and will be displayed in the same way.
+  Otherwise, \code{x} is assumed to be a list or pairlist of calls and will
+  be displayed in the same way.
 }
 \value{
-  \code{traceback()} prints the deparsed call stack deepest call
-  first, and returns it invisibly.  The calls may print on more than
+  \code{traceback()} prints the call stack deepest call first, and
+  returns it invisibly.  The calls may print on more than
   one line, and the first line for each call is labelled by the frame
   number.  The number of lines printed per call can be limited via
   \code{max.lines}.
